--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -107,6 +107,7 @@
 // Icon fonts removed - migrated to Heroicons SVG system
 
 // Import modern CSS components
+@import "components/forms.css";
 @import "components/enhanced-select.css";
 @import "components/toggle-switch.css";
 @import "components/map.css";
