--- a/templates/helper.html.twig
+++ b/templates/helper.html.twig
@@ -32,7 +32,7 @@
       {{ ux_icon('bxs:up-arrow', {'class': 'w-6 h-6'}) }} {{ (coaster.rank - coaster.previousRank)|abs }}
     </span>
     {% elseif coaster.previousRank == coaster.rank %}
-        <span class="badge badge-flat border-primary-600 text-primary-600">{{ ux_icon('bxs:up-arrow', {'class': 'w-6 h-6'}) }}</span>
+        <span class="badge badge-flat border-primary-600 text-primary-600">{{ ux_icon('bxs:right-arrow', {'class': 'w-6 h-6'}) }}</span>
     {% endif %}
 {% endmacro %}
 
